--- a/E-Food Project/E-Food Project.csproj
+++ b/E-Food Project/E-Food Project.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-E_Food_Project-6cc12c56-e2c2-4b50-a431-c4632cbaaa8c</UserSecretsId>
     <RootNamespace>E_Food_Project</RootNamespace>
@@ -26,6 +25,10 @@
     <ProjectReference Include="..\EFood.DataAccess\EFood.DataAccess.csproj" />
     <ProjectReference Include="..\EFood.Models\EFood.Models.csproj" />
     <ProjectReference Include="..\EFood.Utilities\EFood.Utilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
 </Project>
